--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,17 @@
 <div class="container">
     <div>
-        <a id="addnewitem" class="btn btn-primary" routerLink='/addnewitem'>Add new item</a>
+        <div class="row">
+            <div class="col-sm-3">
+
+            </div>
+            <div class="col-sm-6">
+                <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="search data">
+            </div>
+            <div class="col-sm-3">
+                <a id="addnewitem" class="btn btn-primary" routerLink='/addnewitem'>Add new item</a>
+            </div>
+
+        </div>
     </div>
 
     <div>
@@ -18,7 +29,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let post of posts">
+                <tr *ngFor="let post of filterPost">
                     <td>{{post.FirstName}}</td>
                     <td>{{post.LastName}}</td>
                     <td>{{post.EmailName}}</td>
